--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "next": "14.2.5",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "react-reveal": "^1.2.2"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9",
+    "eslint": "^9.7.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.6",
