--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "nanoid": "^3.3.11",
     "next": "^14.2.10",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.12",
@@ -20,7 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.6",
     "typescript": "^5"
